Made the orb icon the same size as the font in the left menu. Social icons hover effect is now specifically for the i and img tags to prevent flicker effects when hovering close to the right border

--- a/css/mediaButtons.css
+++ b/css/mediaButtons.css
@@ -5,6 +5,14 @@
     right: 0px;
 }
 
+.socialList a i, .socialList a img {
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+
 .socialList a i {
     background: #205D7A;
     color: #fff;
@@ -15,14 +23,9 @@
     margin: auto;
     padding-top: 15%;
     padding-bottom: 20%;
-    -webkit-transition: all 0.2s ease-in-out;
-    -moz-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    -ms-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
 }
 
-.socialList a:hover {
+.socialList a:hover i, .socialList a:hover img {
     position:relative;
     right: 10px;
 }
