--- a/css/navBars.css
+++ b/css/navBars.css
@@ -49,10 +49,11 @@
     width: 0;
     vertical-align: middle;
     visibility: hidden;
+    transition: all 0.5s ease-in-out;
 }
 
 .sidenav-left a {
-    margin: 10px 5% 10px 10px;
+    margin: 10px;
 }
 
 /*.stripedNav {
@@ -68,7 +69,7 @@
 }
 
 .sidenav-left a:hover span img {
-    width: 20px;
+    width: 14px; /* same as menu-buttons a font-size */
     visibility: visible;
 }
 
